patch 10004